# SaaS-for-Lawyer

./: .env.example  .gitignore  .txt  LICENSE  README.md  SaaS-for-Lawyer (корінь).txt  TEST_AI_WORKFLOWS.md  backend.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend.txt  Зміни коду (покращена версія).txt  Покращена структура проєкту (на основі FastAPI).txt  Структура проєкту (на основі FastAPI).txt  новий 1.txt  новий 2.txt  новий 3.txt  новий 4.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-enhanced-analysis.yml  ai-intelligence.yml  ai-master-pipeline.yml  code-quality.yml  codeql.yml  compliance-check.yml  docker-security.yml  lint.yml  performance.yml  security-scan.yml  security.yml  simple-checks.yml  status-checks.yml  test.yml
backend/: .black  .flake8  Dockerfile  Dockerfile.celery  Dockerfile.dev  alembic.ini  celery.conf  celerybeat-schedule  mypy.ini  postgresql.conf  pyproject.toml  redis.conf  requirements.txt  setup.cfg
backend/init-db/: init.sql
backend/migrations/: README  alembic.ini  env.py
backend/migrations/versions/: b3ef88803054_initial_models.py
backend/requirements/: base.txt
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/ai_assistant/: service.py
backend/src/api/v1/auth/: enums.py  router.py
backend/src/api/v1/calendar/: models.py
backend/src/api/v1/case_history/: enums.py  schemas.py
backend/src/api/v1/cases/: schemas.py  service.py
backend/src/api/v1/clients/: enums.py  router.py  schemas.py  service.py
backend/src/api/v1/documents/: enums.py  service.py
backend/src/api/v1/hearings/: router.py  schemas.py
backend/src/api/v1/invoices/: models.py  schemas.py  service.py
backend/src/api/v1/knowledge/: models.py
backend/src/api/v1/notifications/: enums.py  models.py
backend/src/api/v1/reports/: enums.py  models.py  schemas.py
backend/src/api/v1/tasks/: enums.py  models.py  schemas.py  service.py
backend/src/api/v1/templates/: enums.py
backend/src/api/v1/time_tracking/: models.py  service.py
backend/src/api/v1/users/: models.py  router.py
backend/src/api/v1/workflows/: models.py  service.py
backend/src/celery/: __init__.py  celery_app.py  config.py  tasks.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  models.py  security.py  triggers.py
backend/src/middleware/: logging.py
backend/src/modules/ai_assistant/: router.py  schemas.py
backend/src/modules/auth/: enums.py  models.py  router.py  schemas.py  service.py
backend/src/modules/calendar/: enums.py  router.py  schemas.py  service.py
backend/src/modules/case_history/: models.py
backend/src/modules/cases/: enums.py  models.py  router.py
backend/src/modules/clients/: crud.py  models.py
backend/src/modules/court_integration/: service.py
backend/src/modules/dashboard/: __init__.py  router.py  schemas.py  service.py
backend/src/modules/documents/: models.py  router.py  schemas.py
backend/src/modules/hearings/: enums.py  models.py  service.py
backend/src/modules/integrations/: enums.py  models.py
backend/src/modules/invoices/: enums.py  router.py  service.py
backend/src/modules/knowledge/: enums.py  models.py  router.py  schemas.py  service.py
backend/src/modules/notifications/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/modules/payments/: enums.py  models.py
backend/src/modules/reports/: enums.py  models.py  router.py  schemas.py  service.py
backend/src/modules/tasks/: router.py  service.py
backend/src/modules/templates/: models.py
backend/src/modules/time_tracking/: enums.py  router.py  schemas.py  service.py
backend/src/modules/users/: router.py  schemas.py  service.py
backend/src/modules/workflows/: enums.py
backend/src/repositories/: base.py  case_repository.py  client_repository.py  invoice_repository.py  user_repository.py
backend/src/utils/: constants.py  helpers.py  validators.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
frontend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/public/locales/en/: translation.json
frontend/public/locales/uk/: translation.json
frontend/src/: App.tsx  i18n.ts  index.css  index.tsx  main.tsx  vite-env.d.ts
frontend/src/components/Common/: ErrorFallback.tsx  LoadingSpinner.tsx  PrivateRoute.tsx  index.ts
frontend/src/components/Layout/: AppLayout.tsx  Header.css  Header.tsx  LoginForm.tsx  RegisterForm.tsx  Sidebar.css  Sidebar.tsx  SortableItem.tsx  index.ts
frontend/src/components/UI/: Button.tsx  FullPageSpinner.tsx  index.ts
frontend/src/constants/: index.ts
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx
frontend/src/core/: config.ts
frontend/src/hooks/: useAuth.ts  useCases.ts  useTheme.tsx
frontend/src/layouts/: AuthLayout.css  AuthLayout.tsx  MainLayout.css  MainLayout.tsx
frontend/src/pages/: NotFound.tsx  NotFoundPage.tsx
frontend/src/pages/Admin/: RolesPermissionsPage.tsx  SystemSettingsPage.tsx  UsersManagementPage.tsx
frontend/src/pages/Auth/: AuthPages.css  LoginPage.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/Calendar/: CalendarPage.tsx
frontend/src/pages/Cases/: CaseDetailPage.tsx  CasesPage.tsx  index.tsx
frontend/src/pages/Clients/: ClientDetailPage.tsx  ClientsPage.tsx
frontend/src/router/: AppRoutes.tsx  ppRoutes.tsx  routes.tsx
frontend/src/services/: api.ts  auth.ts  case.ts  cases.ts  clients.ts  test-services.ts  users.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  dateFormatter.ts  helpers.ts  network.ts
logging/: filebeat.yml  logstash.conf
monitoring/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: backend.conf  frontend.conf
scripts/: backup.sh  deploy.sh  setup.sh
(+19 files in other folders)
