[tool.poetry]
name = "lawyer-crm-backend"
version = "1.0.0"
description = "SaaS для управління юридичними справами"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlmodel = "^0.0.22"
alembic = "^1.14"
asyncpg = "^0.30"
psycopg2-binary = "^2.9"
redis = "^5.2"
python-jose = "^3.3"
passlib = "^1.7"
bcrypt = "^4.0"
python-multipart = "^0.0.6"
minio = "^7.2"
celery = "^5.3"
structlog = "^23.3"
prometheus-client = "^0.19"
httpx = "^0.25"
pytest = "^7.4"
pytest-asyncio = "^0.21"
flake8 = "^6.1"
black = "^23.12"
mypy = "^1.7"
pre-commit = "^3.8"
python-dotenv = "^1.1"
pydantic = "^2.11"
pydantic-settings = "^2.11"
email-validator = "^2.3"
requests = "^2.31"
urllib3 = "^2.0"
cryptography = "^41.0"
iniconfig = "^2.1"
packaging = "^23.2"
pluggy = "^1.3"
py = "^1.11"
tomli = "^2.0"
typing-extensions = "^4.8"
click = "^8.1"
colorama = "^0.4"
exceptiongroup = "^1.1"
h11 = "^0.14"
idna = "^3.4"
pyasn1 = "^0.5"
rsa = "^4.9"
pydantic-core = "^2.14"
sniffio = "^1.3"
anyio = "^3.7"
httpcore = "^0.17"
certifi = "^2023.7"
charset-normalizer = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"