[tool.poetry]
name = "lawyer-crm-backend"
version = "1.0.0"
description = "SaaS для управління юридичними справами"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# ------- core -------
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.11"
pydantic-settings = "^2.11"

# ------- caching -------
fastapi-cache2 = {extras = ["redis"], version = "^0.2"}

# ------- database -------
sqlmodel = "^0.0.22"
alembic = "^1.14"
asyncpg = "^0.30"
psycopg2-binary = "^2.9"

# ------- security -------
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
bcrypt = "^4.0"
python-multipart = "^0.0.20"

# ------- redis & celery -------
redis = "^4.6"
celery = "^5.4"
celery-redbeat = "^2.2"

# ------- object storage -------
minio = "^7.2"

# ------- http / e-mail -------
httpx = "^0.27"
email-validator = "^2.3"
aiosmtplib = "^3.0"

# ------- observability -------
structlog = "^24.2"
prometheus-client = "^0.20"

# ------- extras (optional) -------
sentry_sdk = { version = ">=2.0", optional = true }
stripe = { version = ">=9.0", optional = true }
openai = "^1.109.1"

[tool.poetry.extras]
sentry = ["sentry_sdk"]
stripe = ["stripe"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-cov = "^5.0"
factory-boy = "^3.3"
black = "^24.4"
ruff = "^0.5"
isort = "^6.1"
pre-commit = "^3.8"
mypy = "^1.11"
sqlalchemy-stubs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "SIM", "ARG", "RUF"
]
ignore = ["RUF012"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"