[metadata]
name = lawyer-crm-backend
version = 1.0.0
description = FastAPI backend for Lawyer CRM SaaS
author = Dmytro Laposha
author_email = d.laposha@gmail.com
license = MIT
keywords = fastapi, lawyer, crm, saas

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    sqlalchemy>=2.0.0
    alembic>=1.12.0
    psycopg2-binary>=2.9.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.0
    python-multipart>=0.0.0
    python-dotenv>=1.0.0
    email-validator>=2.0.0
    pydantic-settings>=2.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    httpx>=0.24.0

[options.packages.find]
where = src
exclude = 
    tests*
    test*
    docs*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv

[mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[egg_info]
tag_build = 
tag_date = 0